--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -10,6 +10,6 @@ pico_sdk_init()
 add_subdirectory(ArduCAM)
 # Compile choose demo 
 add_subdirectory(Examples/Arducam_MINI_2MP_Plus_Videostreaming)
-add_subdirectory(Examples/ArduCAM_Mini_2MP_Plus_4CAM_VideoStreaming)
-add_subdirectory(Examples/Arducam_MINI_5MP_Plus_Videostreaming)
-add_subdirectory(Examples/ArduCAM_Mini_5MP_Plus_4CAM_VideoStreaming)
+#add_subdirectory(Examples/ArduCAM_Mini_2MP_Plus_4CAM_VideoStreaming)
+#add_subdirectory(Examples/Arducam_MINI_5MP_Plus_Videostreaming)
+#add_subdirectory(Examples/ArduCAM_Mini_5MP_Plus_4CAM_VideoStreaming)
